Fix Issue #33 with footer alignment and wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h6 {
 footer {
   background-color: #292929;
   color: #fff;
-  padding: 2rem;
+  padding: 4rem 0;
   line-height: 1.5;
   letter-spacing: 1px;
 }
@@ -617,11 +617,10 @@ select{
 }
 
 /* 9. Footer Section*/
+
 .footer {
-  background-color: #292929; 
   width: 100%; 
   height: 100%;
-  padding: 2.5rem;  
 }
 
 .footer-icons {
@@ -636,8 +635,16 @@ select{
   padding-bottom: 20px; 
   /* padding-right: 20px; 
   padding-left: 20px;  */
-    
 }
+/* TEST */
+.footer-icons-test {
+  display: block;
+  text-align: center;
+  font-size: 2rem; 
+  color: #eec7b5;
+  padding-bottom: 20px; 
+}
+/* END TEST */
 
 .footer-social-media li {
   flex: 10%;  
@@ -646,14 +653,31 @@ select{
   flex-wrap: wrap-reverse; 
 }
 
+/* TEST */
+.footer-icons-li-test { /* previously .footer-social-media li */
+  display: inline-block;
+  width: 3rem;
+  padding: .5rem;
+}
+/* END TEST */
+
 .footer a {
   color: #fff; 
   text-decoration: none; 
 }
 
-.links a :hover {
+.links a: hover {
   background-color: #FFF; 
 }
+
+/* TEST */
+/* Note: White background will not work if we keep the text color white */
+/* Here is an alternative hover effect: */
+.footer-link-li-test:hover {
+  /* background-color: #5a5a5a; */
+  font-size: 115%;
+}
+/* END TEST */
 
 .footer-row {
   display: flex; 
@@ -665,12 +689,44 @@ select{
   min-width: 0;  
 }
 
+/* TEST */
+.footer-row-test {
+  display: flex; 
+  flex-direction: column-reverse;  
+   align-items: center; 
+  justify-content: center; 
+  text-align: center;   
+  min-width: 320px;  
+}
+
+@media (min-width: 1041px) {
+  .footer-row-test {
+    /* width: 360px; */
+    flex-direction: row;
+  }
+}
+/* END TEST */
+
 .footer-column {
   flex: 33.33%;  
   padding-right: 20px; 
   padding-left: 20px; 
   box-sizing: border-box;
 }
+
+/* TEST */
+.footer-column-test {
+  flex: 33.33%;  
+  min-width: 320px;
+  padding: 20px;
+}
+/* END TEST */
+
+
+
+
+
+
 
 /*.copyright {
     text-align: center;  
